# STR

./: .gitignore  README.md
.metadata/: .log4j2.xml  version.ini
.metadata/.plugins/org.eclipse.cdt.core/: str-miros-stm32f103.1729430572048.pdom
.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
escalonator/: .project
escalonator/Inc/: rm.cpp  rm.h
escalonator/Src/: main.c  rm.c
ex/src/: ex1.cpp  ex2.cpp  ex3.cpp  t1.cpp  t1_2.cpp  t2.cpp  t3.cpp
filosfos/: CMakeCache.txt  Makefile  README.md  cmake_install.cmake  project
filosfos/include/: filosofos.h  jantar.h
filosfos/src/: filosofos.cpp  jantar.cpp  main.cpp
filosofos/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  project
filosofos/include/: filosofos.h  jantar.h
filosofos/src/: filosofos.cpp  jantar.cpp  main.cpp
ordena/: ordena.cpp  t1
product/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  project
product/include/: func.h
product/src/: func.cpp  main.cpp
rm_cpp/.metadata/: .log4j2.xml  version.ini
rm_cpp/Inc/: rm.h
rm_cpp/Src/: main.cpp  rm.cpp  sem_mutex.c
rm_cpp2/: README.md
rm_cpp2/.metadata/: .log4j2.xml  version.ini
rm_cpp2/Inc/: escalonador.h  fila_prioridades.h  sem.h  tasks.h
rm_cpp2/Src/: escalonador.cpp  fila_prioridades.cpp  main.cpp  sem.c  tasks.cpp
simulations/: RTM.py
stm/: README.md
stm/ex_1/: platformio.ini
stm/so/: .mxproject  CMakeLists.txt  so.ioc
stm/test1/: platformio.ini
stm/test3/: CMakeLists.txt  main.c  toolchain.cmake
stm32cubeide/.metadata/: .log4j2.xml  version.ini
(+82 files in other folders)
